<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/licht"
            android:icon="@drawable/ic_baseline_brightness_7_24"
            android:title="@string/menu_light" />

        <item
            android:id="@+id/snake"
            android:icon="@drawable/game"
            android:title="@string/menu_snake" />
        <item
            android:id="@+id/tetris"
            android:icon="@drawable/game"
            android:title="@string/menu_tetris" />

    </group>
</menu>