<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:defaultValue="2849"
    app:defaultValue="2849">

    <PreferenceCategory app:title="Verbindung">

        <EditTextPreference
            android:id="@+id/ipadressenfeld"
            app:key="ipadressenfeldkey"
            app:title="IP-Adresse"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="2489"
            android:key="portkey"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Port"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="2489" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Sync">

        <SwitchPreferenceCompat
            app:key="dark"
            app:title="Dark Theme"
            />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>