<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.ft.LEDWallApp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/licht"
        android:name="de.ft.LEDWallApp.ui.light.Licht"
        android:label="Licht"
        tools:layout="@layout/licht_fragment" />
    <fragment
        android:id="@+id/snake"
        android:name="de.ft.LEDWallApp.ui.snake.Snake"
        android:label="Snake"
        tools:layout="@layout/snake_fragment" />
    <fragment
        android:id="@+id/tetris"
        android:name="de.ft.LEDWallApp.ui.tetris.Tetris"
        android:label="Tetris"
        tools:layout="@layout/tetris_fragment" />

    <fragment
        android:id="@+id/racinggame"
        android:name="de.ft.LEDWallApp.ui.racinggame.RacingGame"
        android:label="@string/menu_racinggame"
        tools:layout="@layout/racing_game_fragment" />

    <fragment
        android:id="@+id/flappybird"
        android:name="de.ft.LEDWallApp.ui.flappybird.FlappyBird"
        android:label="@string/menu_flappybird"
        tools:layout="@layout/flappy_bird_fragment" />
    <fragment
        android:id="@+id/sokoban"
        android:name="de.ft.LEDWallApp.ui.Sokoban.Sokoban"
        android:label="@string/menu_sokoban"
        tools:layout="@layout/sokoban_fragment" />


</navigation>